--- a/index.html
+++ b/index.html
@@ -4,91 +4,91 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <!-- <nav section> -->
-      <nav>
-        <img src="./images/logo.svg" alt="" />
-        <ul>
-          <li>Home</li>
-          <li>Courses</li>
-          <li>Instructors</li>
-          <li>Testimonials</li>
-        </ul>
-        <div class="button">
+    <nav>
+      <img src="./images/logo.svg" alt="" />
+      <ul>
+        <li>Home</li>
+        <li>Courses</li>
+        <li>Instructors</li>
+        <li>Testimonials</li>
+      </ul>
+      <div class="button">
+        <button class="login">Login</button>
+        <button class="signin">Sign In</button>
+      </div>
+    </nav>
 
-            <button>Login</button>
-            <button>Signin</button>
+    <div class="first">
+      <div class="left">
+        <h1>
+          Embark on a <span class="purple">Delightful</span> Journey of
+          <span class="purple">Growth</span> with
+          <span class="purple">Online</span> Learning!
+        </h1>
+        <p>
+          Explore our wide range of expert-led courses in coding, digital
+          marketing, photography, and more."
+        </p>
+        <button class="but">Get Started</button>
+        <button class="ton">Get free trial</button>
+        <div class="numbers">
+          <div class="fifty">
+            <h2>50+</h2>
+            <p>Courses to choose from</p>
+          </div>
+          <div class="thousand">
+            <h2>1000+</h2>
+            <p>Student Trained</p>
+          </div>
+          <div class="hundred">
+            <h2>100+</h2>
+            <p>Professional Trainers</p>
+          </div>
         </div>
-      </nav>
-      <!-- <first section> -->
-
-      <div class="first">
-        <div class="left">
-            <h1>Embark on a Delightful Journey of Growth with Online Learning!</h1>
-            <p>
-              Explore our wide range of expert-led courses in coding, digital
-              marketing, photography, and more."
-            </p>
-            <button>Get Started</button>
-            <button>Get free trial</button>
-            <div class="numbers">
-              <div class="fifty">
-                <h2>50+</h2>
-                <p>Courses to choose from</p>
-              </div>
-              <div class="thousand">
-                <h2>1000+</h2>
-                <p>Student Trained</p>
-              </div>
-              <div class="hundred">
-                <h2>100+</h2>
-                <p>Professional Trainers</p>
-              </div>
-            </div> 
-            <!-- <end of left> -->
         </div>
-        <div class="right">
-            <div class="circle"></div>
-          <img src="./images/happy-young-woman-holding-laptop-gray-wall-transformed 2.svg" alt="" />
+    <div class="right">
+          <img src="./images/ladk.svg" alt="" />
         </div>
       </div>
+    </div>
 
-   
-
-    <!-- <second section> -->
     <div class="second">
       <div class="text">
         <h3>Our Services</h3>
-        <h2>Dive into an Interactive and Engaging Learning Adventure</h2>
+        <h2>Dive into an Interactive and Engaging Learning <br>Adventure</h2>
       </div>
       <div class="flex">
         <div class="box-1">
           <div class="icon">
-            <img src="./images/Iconweb.svg" alt="" />
+            <img src="./images/Frame 391.svg" alt="" />
             <h3>Web Development</h3>
           </div>
-          <div class="box">
+          <div class="parr">
             <p>
               Unleash Your Coding Creativity: Stay Up-to-Date with Cutting-Edge
               Design Lessons!
             </p>
-            <p>Learn more</p>
+            <p class="learn">Learn more ></p>
           </div>
         </div>
         <div class="box-2">
           <div class="icon2">
-            <img src="./images/icondigital.svg" alt="" />
+            <img src="./images/Frame 392.svg" alt="" />
             <h3>digital marketing</h3>
           </div>
-          <div class="box2">
+          <div class="parr">
             <p>
               Master the Art of Digital Marketing: Stay Ahead with the Latest
               Strategies and Innovations!
             </p>
-            <p>Learn more</p>
+            <p class="learn2">Learn more ></p>
           </div>
         </div>
         <div class="box-3">
@@ -96,36 +96,34 @@
             <img src="./images/iconphotography.svg" alt="" />
             <h3>photography</h3>
           </div>
-          <div class="box3">
+          <div class="parr">
             <p>
               Capture the World Through Your Lens: Discover the Latest in
               Photography Techniques and Trends!
             </p>
-            <p>Learn more</p>
+            <p class="learn3">Learn more ></p>
           </div>
         </div>
-      
-      <button>Explore All Courses</button>
-      <!-- <end></end> -->
+      </div>
+      <div class="button1">
+        <button>Explore All Courses</button>
+      </div>
     </div>
 
     <!-- <Third section> -->
 
     <div class="third">
-      <div class="third-right">
+      <div class="third-left">
         <img src="./images/second picture.svg" alt="" />
       </div>
-      <div class="third-left">
+      <div class="third-right">
         <div class="benefit">
-          <h1>Benefits Of Learning Online With Learn-Pro</h1>
+          <h1>Benefits Of Learning Online <br>With Learn-Pro</h1>
         </div>
-
-        <!-- <flexibility & practical> -->
-
         <div class="boxes1">
-          <div class="flexibilty">
+          <div class="flexibility boxes">
             <img src="./images/flexibility.svg" alt="" />
-            <h3>flexibility</h3>
+            <h3>Flexibility</h3>
             <p>Learn at your own pace from anywhere, anytime</p>
           </div>
           <div class="practical">
@@ -137,8 +135,6 @@
             </p>
           </div>
         </div>
-
-        <!-- <Diverse & Supportive> -->
         <div class="boxes2">
           <div class="diverse">
             <img src="./images/diverse.svg" alt="" />
@@ -158,126 +154,122 @@
           </div>
         </div>
       </div>
-
-      <!-- <Fourth section> -->
-      <div class="fourth">
-        <h3>Instructors</h3>
-        <h2>Meet the Brilliant Minds:</h2>
-        <h4>
-          At Learn-Pro, Unlock Limitless Knowledge and Skills Today! Join our
-          global community of passionate learners.
-        </h4>
-        <div class="flex-4th">
-          <div class="flex-41th">
-            <img src="./images/Avatar-1.svg" alt="" />
-            <h4>Jackson Leo</h4>
-            <h4>UI/UX Designer Lead</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur. Vitae ut sagittis
-              tincidunt et fames dui turpis.
-            </p>
-            <img src="./images/linkedin.svg" alt="" />
-          </div>
-          <div class="flex-41th">
-            <img src="./images/Avatar-2.svg" alt="" />
-            <h4>Perry Henry</h4>
-            <h4>Web development Lead</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur. Vitae ut sagittis
-              tincidunt et fames dui turpis.
-            </p>
-            <img src="./images/linkedin.svg" alt="" />
-          </div>
-          <div class="flex-41th">
-            <img src="./images/Avatar-3.svg" alt="" />
-            <h4>kenny Marvin</h4>
-            <h4>Mobile development Lead</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur. Vitae ut sagittis
-              tincidunt et fames dui turpis.
-            </p>
-            <img src="./images/linkedin.svg" alt="" />
-          </div>
-          <div class="flex-41th">
-            <img src="./images/Avatar-4.svg" alt="" />
-            <h4>Mary Jake</h4>
-            <h4>Digital Marketing Lead</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur. Vitae ut sagittis
-              tincidunt et fames dui turpis.
-            </p>
-            <img src="./images/linkedin.svg" alt="" />
-          </div>
-        </div>
-      </div>
-      <!-- <the fifth> -->
-      <div class="fifth">
-        <div class="up">
-          <h2>Testimonials</h2>
-          <h1>Stories of Success and Satisfaction</h1>
-        </div>
-        <div class="down">
-          <div class="down-image">
-            <img src="./images/Last man picture.svg" alt="" />
-            <h1>Jackson Leo</h1>
-            <h2>Founder and CEO OF Supreme</h2>
-          </div>
-          <div class="down-text">
-            <img src="./images/first comma.svg" alt="" />
-            <p>
-              Learn Pro has been a remarkable journey of personal and
-              professional growth. From the moment I enrolled, I knew I was in
-              the right place. The courses offered a perfect balance of theory
-              and practical applications, giving me the knowledge and skills
-              needed to excel in my field.
-            </p>
-            <img src="./images/pngwing 2.svg" alt="" />
-          </div>
-        </div>
-      </div>
-      <!-- <footer> -->
-      <footer>
-        <div class="upper">
-          <div class="diva">
-            <h3>Learn-Pro</h3>
-            <h3>
-              Elevating Education, Igniting Potential, Empowering Success.
-            </h3>
-          </div>
-          <div class="divb">
-            <h4>Product</h4>
-            <h3>Home</h3>
-            <h3>Courses</h3>
-            <h3>Instructors</h3>
-            <h3>Testimonials</h3>
-            <h3>Contact</h3>
-          </div>
-          <div class="divc">
-            <h4>Support</h4>
-            <h3>Account</h3>
-            <h3>Feedback</h3>
-            <h3>Contact Us</h3>
-            <h3>Accessibility</h3>
-          </div>
-          <div class="divd">
-            <h4>Social</h4>
-            <h3>Twitter</h3>
-            <h3>LikedIn</h3>
-            <h3>Threads</h3>
-            <h3>Facebook</h3>
-          </div>
-          <div class="dive">
-            <h4>Get our app</h4>
-            <img src="./images/Google Play outline badge.svg" alt="" />
-            <img src="./images/App Store outline badge.svg" alt="" />
-          </div>
-        </div>
-        <div class="lower">
-          <h4>&copy; 2023G Learn-Pro. All rights reserved.</h4>
-          <img src="./images/Social icons.svg" alt="" />
-        </div>
-      </footer>
-      <!-- <the end> -->
     </div>
+    <div class="fourth">
+      <h3>Instructors</h3>
+      <h2>Meet the Brilliant Minds:</h2>
+      <h4>
+        At <span class="pro">Learn-Pro</span>, Unlock Limitless Knowledge and
+        Skills Today! Join our global <br>community of passionate learners.
+      </h4>
+      <div class="flex-4th">
+        <div class="flex-41th">
+          <img src="./images/Avatar-1.svg" alt="" />
+          <h4>Jackson Leo</h4>
+          <h4 class="cool">UI/UX Designer Lead</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Vitae ut sagittis tincidunt
+            et fames dui turpis.
+          </p>
+          <img src="./images/linkedin.svg" alt="" class="cooll" />
+        </div>
+        <div class="flex-41th">
+          <img src="./images/Avatar-2.svg" alt="" />
+          <h4>Perry Henry</h4>
+          <h4 class="cool">Web development Lead</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Vitae ut sagittis tincidunt
+            et fames dui turpis.
+          </p>
+          <img src="./images/linkedin.svg" alt="" class="cooll" />
+        </div>
+        <div class="flex-41th">
+          <img src="./images/Avatar-3.svg" alt="" />
+          <h4>kenny Marvin</h4>
+          <h4 class="cool">Mobile development Lead</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Vitae ut sagittis tincidunt
+            et fames dui turpis.
+          </p>
+          <img src="./images/linkedin.svg" alt="" class="cooll" />
+        </div>
+        <div class="flex-41th">
+          <img src="./images/Avatar-4.svg" alt="" />
+          <h4>Mary Jake</h4>
+          <h4 class="cool">Digital Marketing Lead</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Vitae ut sagittis tincidunt
+            et fames dui turpis.
+          </p>
+          <img src="./images/linkedin.svg" alt="" class="cooll" />
+        </div>
+      </div>
+    </div>
+
+    <div class="fifth">
+      <div class="up">
+        <h2><em>Testimonials</em></h2>
+        <h1>Stories of Success and Satisfaction</h1>
+      </div>
+      <div class="down">
+        <div class="down-image">
+          <img src="./images/Last man picture.svg" alt="" />
+          <h1>Jackson Leo</h1>
+          <h2>Founder and CEO OF Supreme</h2>
+        </div>
+        <div class="down-text">
+          <img src="./images/first comma.svg" alt="" />
+          <p>
+            Learn Pro has been a remarkable journey of personal and professional
+            growth. From the moment I enrolled, I knew I was in the right place.
+            The courses offered a perfect balance of theory and practical
+            applications, giving me the knowledge and skills needed to excel in
+            my field.
+          </p>
+          <img src="./images/pngwing 2.svg" alt="" class="call" />
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="upper">
+        <div class="diva">
+          <p class="proo">Learn-Pro</p>
+          <h3>Elevating Education, Igniting Potential, Empowering Success.</h3>
+        </div>
+        <div class="divb">
+          <p>Product</p>
+          <h3>Home</h3>
+          <h3>Courses</h3>
+          <h3>Instructors</h3>
+          <h3>Testimonials</h3>
+          <h3>Contact</h3>
+        </div>
+        <div class="divc">
+          <p>Support</p>
+          <h3>Account</h3>
+          <h3>Feedback</h3>
+          <h3>Contact Us</h3>
+          <h3>Accessibility</h3>
+        </div>
+        <div class="divd">
+          <p>Social</p>
+          <h3>Twitter</h3>
+          <h3>LikedIn</h3>
+          <h3>Threads</h3>
+          <h3>Facebook</h3>
+        </div>
+        <div class="dive">
+          <h4>Get our app</h4>
+          <img src="./images/Google Play outline badge.svg" alt="" />
+          <img src="./images/App Store outline badge.svg" alt="" />
+        </div>
+      </div>
+      <div class="lower">
+        <h4>&copy; 2023G Learn-Pro. All rights reserved.</h4>
+        <img src="./images/Social icons.svg" alt="" />
+      </div>
+    </footer>
+    <script src="text.js"></script>
   </body>
 </html>
